--- a/web/pages/super.ejs
+++ b/web/pages/super.ejs
@@ -16,9 +16,11 @@
     <link rel="stylesheet" href="<%-window.libURL%>libs/css/pnotify.custom.min.css">
     <link rel="stylesheet" href="<%-window.libURL%>libs/css/now-ui-kit.css?v=1.1.0" />
     <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.basic.css">
+    <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.modal.css">
     <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.forms.css">
     <link rel="stylesheet" href="<%-window.libURL%>libs/css/super-page.css" />
     <script src="<%-window.libURL%>libs/js/jquery.min.js"></script>
+    <script src="<%-window.libURL%>libs/js/jquery-ui.min.js"></script>
     <script src="<%-window.libURL%>libs/js/basic.js"></script>
     <script src="<%-window.libURL%>libs/js/jquery.serialize.js"></script>
     <script src="<%-window.libURL%>libs/js/pnotify.custom.min.js"></script>
