--- a/web/pages/blocks/subpermissions.ejs
+++ b/web/pages/blocks/subpermissions.ejs
@@ -15,32 +15,40 @@
             <div class="form-group">
                 <label><div><span><%-lang['All Monitors and Privileges']%></span></div>
                     <div><select class="form-control" detail="allmonitors">
-                        <option value="0" selected><%-lang.No%></option>  
-                        <option value="1"><%-lang.Yes%></option>  
+                        <option value="0" selected><%-lang.No%></option>
+                        <option value="1"><%-lang.Yes%></option>
                     </select></div>
                 </label>
             </div>
             <div class="form-group permission-view">
                 <label><div><span><%-lang['Can Create and Delete Monitors']%></span></div>
                     <div><select class="form-control" detail="monitor_create">
-                        <option value="0" selected><%-lang.No%></option>  
-                        <option value="1"><%-lang.Yes%></option>  
+                        <option value="0" selected><%-lang.No%></option>
+                        <option value="1"><%-lang.Yes%></option>
                     </select></div>
                 </label>
             </div>
             <div class="form-group permission-view">
                 <label><div><span><%-lang['Can Change User Settings']%></span></div>
                     <div><select class="form-control" detail="user_change">
-                        <option value="0" selected><%-lang.No%></option>  
-                        <option value="1"><%-lang.Yes%></option>  
+                        <option value="0" selected><%-lang.No%></option>
+                        <option value="1"><%-lang.Yes%></option>
                     </select></div>
                 </label>
             </div>
             <div class="form-group">
                 <label><div><span><%-lang['Can View Logs']%></span></div>
                     <div><select class="form-control" detail="view_logs">
-                        <option value="0" selected><%-lang.No%></option>  
-                        <option value="1"><%-lang.Yes%></option>  
+                        <option value="0" selected><%-lang.No%></option>
+                        <option value="1"><%-lang.Yes%></option>
+                    </select></div>
+                </label>
+            </div>
+            <div class="form-group">
+                <label><div><span><%-lang['Landing Page']%></span></div>
+                    <div><select class="form-control" detail="landing_page">
+                        <option value="" selected><%-lang.Default%></option>
+                        <option value="timelapse"><%-lang.Timelapse %></option>
                     </select></div>
                 </label>
             </div>
@@ -57,8 +65,8 @@
                 <div class="form-group">
                     <label><div><span><%- v.name %></span></div>
                         <div><select class="form-control" monitor="monitors" mid="<%- v.mid %>">
-                            <option value="0" selected><%-lang.No%></option>  
-                            <option value="1"><%-lang.Yes%></option>  
+                            <option value="0" selected><%-lang.No%></option>
+                            <option value="1"><%-lang.Yes%></option>
                         </select></div>
                     </label>
                 </div>
@@ -76,8 +84,8 @@
                 <div class="form-group">
                     <label><div><span><%- v.name %></span></div>
                         <div><select class="form-control" monitor="monitor_edit" mid="<%- v.mid %>">
-                            <option value="0" selected><%-lang.No%></option>  
-                            <option value="1"><%-lang.Yes%></option>  
+                            <option value="0" selected><%-lang.No%></option>
+                            <option value="1"><%-lang.Yes%></option>
                         </select></div>
                     </label>
                 </div>
@@ -95,8 +103,8 @@
                 <div class="form-group">
                     <label><div><span><%- v.name %></span></div>
                         <div><select class="form-control" monitor="video_view" mid="<%- v.mid %>">
-                            <option value="0" selected><%-lang.No%></option>  
-                            <option value="1"><%-lang.Yes%></option>  
+                            <option value="0" selected><%-lang.No%></option>
+                            <option value="1"><%-lang.Yes%></option>
                         </select></div>
                     </label>
                 </div>
@@ -114,8 +122,8 @@
                 <div class="form-group">
                     <label><div><span><%- v.name %></span></div>
                         <div><select class="form-control" monitor="video_delete" mid="<%- v.mid %>">
-                            <option value="0" selected><%-lang.No%></option>  
-                            <option value="1"><%-lang.Yes%></option>  
+                            <option value="0" selected><%-lang.No%></option>
+                            <option value="1"><%-lang.Yes%></option>
                         </select></div>
                     </label>
                 </div>
