--- a/web/libs/css/dash2.basic.css
+++ b/web/libs/css/dash2.basic.css
@@ -98,7 +98,7 @@ img{max-width:100%}
 
 .demo-blog .demo-blog__posts.montage{max-width:100%}
 
-.mdl-layout__drawer{overflow-y: visible!important}
+/* .mdl-layout__drawer{overflow-y: visible!important} */
 .hide-side .mdl-layout__drawer{overflow-y: hidden}
 .mdl-layout__header-row{padding-left:10!important}
 .mdl-layout__header-row .nav>li>a{border-radius:50%;}
