--- a/web/libs/css/dash2.basic.css
+++ b/web/libs/css/dash2.basic.css
@@ -426,3 +426,15 @@ ul.msg_list li .message {
     letter-spacing: 3pt;
     font-size: 8pt;
 }
+/* Start of custom table sorter */
+.table .table-header-sorter {
+    cursor: pointer;
+    white-space: nowrap;
+}
+.table th.table-header-sorter i.fa-sort {
+    color: #ccc;
+}
+.table th.table-header-sorter i {
+    margin-left: 10px;
+}
+/* End of custom table sorter */
