--- a/web/pages/home.ejs
+++ b/web/pages/home.ejs
@@ -21,6 +21,7 @@
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.basic.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.misc.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.monitors.css">
+<link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.monitorStates.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.forms.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.modal.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.powervideo.css">
