--- a/web/pages/super.ejs
+++ b/web/pages/super.ejs
@@ -150,13 +150,7 @@
                                                                 <p><i class="fa fa-retweet"></i> <%-lang['Flush PM2 Logs']%></p>
                                                             </a>
                                                         </li>
-<!--
-                                                        <li class="nav-item">
-                                                            <a class="nav-link" system="update">
-                                                                <p><i class="fa fa-arrow-up"></i> <%-lang['Update']%></p>
-                                                            </a>
-                                                        </li>
--->
+
                                                     </ul>
                                                 </div>
                                             </div>
@@ -171,6 +165,11 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="row text-center">
+                    <div class="col">
+                        <small class="epic-text" style="font-weight: 700;color: #fff;letter-spacing: 2pt;">Current Version : <%- currentVersion %></small>
                     </div>
                 </div>
             </div>
