log Shinobi version on start and show in Superuser panel+++

--- a/web/pages/super.ejs
+++ b/web/pages/super.ejs
@@ -169,7 +169,11 @@
                 </div>
                 <div class="row text-center">
                     <div class="col">
-                        <small class="epic-text" style="font-weight: 700;color: #fff;letter-spacing: 2pt;">Current Version : <%- currentVersion %></small>
+                        <a href="https://gitlab.com/Shinobi-Systems/Shinobi/commit/<%- currentVersion %>" target="_blank">
+                            <small class="epic-text" style="font-weight: 700;color: #fff;letter-spacing: 2pt;">
+                                Current Version : <%- currentVersion %>
+                            </small>
+                        </a>
                     </div>
                 </div>
             </div>
