--- a/web/pages/home.ejs
+++ b/web/pages/home.ejs
@@ -24,7 +24,6 @@
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.monitorStates.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.forms.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.modal.css">
-<link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.powervideo.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.ptzcontrols.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.regioneditor.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.righttoleft.css">
@@ -191,7 +190,6 @@
 <% include blocks/logs.ejs %>
 <% include blocks/settings.ejs %>
 <% include blocks/filters.ejs %>
-<% include blocks/powervideo.ejs %>
 <% include blocks/timelapse.ejs %>
 <% include blocks/videoview.ejs %>
 <% include blocks/monitoredit.ejs %>
@@ -225,7 +223,6 @@
 <script src="<%-window.libURL%>libs/js/menu.js"></script>
 <script src="<%-window.libURL%>libs/js/clock.js"></script>
 <script src="<%-window.libURL%>libs/js/poseidon.js"></script>
-<script src="<%-window.libURL%>libs/js/Chart.js"></script>
 <script src="<%-window.libURL%>libs/js/clusterPoints.js"></script>
 <script src="<%-window.libURL%>libs/js/daterangepicker.js"></script>
 <script src="<%-window.libURL%>libs/js/jquery.canvasAreaDraw.js"></script>
@@ -243,7 +240,9 @@
 <script src="<%-window.libURL%>libs/js/dash2.elements.js"></script>
 <script src="<%-window.libURL%>libs/js/dash2.elementbuilder.js"></script>
 <script src="<%-window.libURL%>libs/js/dash2.init.js"></script>
+<script src="<%-window.libURL%>libs/js/dash2.confirm.js"></script>
 <% customAutoLoad.LibsJs.forEach(function(lib){ %>
     <script src="<%-window.libURL%>libs/js/<%-lib%>"></script>
 <% }) %>
 <% include blocks/help.ejs %>
+<% include blocks/powerVideo2.ejs %>
