make "Zip and Download" a client side interaction

--- a/web/pages/home.ejs
+++ b/web/pages/home.ejs
@@ -218,6 +218,8 @@
 <script src="<%-window.libURL%>libs/js/libde265.min.js"></script>
 <script src="<%-window.libURL%>libs/js/bootstrap-slider.min.js"></script>
 <script type="text/javascript" src="<%-window.libURL%>libs/js/flv.shinobi.js">;</script>
+<script src="<%-window.libURL%>libs/js/jszip.min.js"></script>
+<script src="<%-window.libURL%>libs/js/dash2.downloadAndZip.js"></script>
 <script src="<%-window.libURL%>libs/js/menu.js"></script>
 <script src="<%-window.libURL%>libs/js/clock.js"></script>
 <script src="<%-window.libURL%>libs/js/poseidon.js"></script>
