Added locales to calendar

--- a/web/pages/home.ejs
+++ b/web/pages/home.ejs
@@ -214,6 +214,7 @@
 <script src="<%-window.libURL%>libs/js/bootstrap-table.min.js"></script>
 <script src="<%-window.libURL%>libs/js/socket.io.js"></script>
 <script src="<%-window.libURL%>libs/js/fullcalendar.min.js"></script>
+<script src="<%-window.libURL%>libs/js/locale-all.js"></script>
 <script src="<%-window.libURL%>libs/js/hls.min.js"></script>
 <script src="<%-window.libURL%>libs/js/libde265.min.js"></script>
 <script src="<%-window.libURL%>libs/js/bootstrap-slider.min.js"></script>
