--- a/web/pages/blocks/powerVideo2.ejs
+++ b/web/pages/blocks/powerVideo2.ejs
@@ -10,20 +10,13 @@
       </div>
       <div class="modal-body" style="overflow:inherit">
           <div class="row">
-              <div class="col-md-4" id="powerVideoTabs" tab-chooser-parent>
-                  <div class="form-group-group grey text-center">
-                      <h4></h4>
-                      <div class="btn-group" id="powerVideoTabButtons">
-                          <button type="button" class="btn btn-primary btn-sm" tab-chooser="monitors"><%- lang.Monitors %></button>
-                          <button type="button" class="btn btn-primary btn-sm" tab-chooser="settings"><%- lang['Search Settings'] %></button>
-                      </div>
-                  </div>
-                  <div class="form-group-group grey" tab-section="monitors" style="max-height:265px">
+              <div class="col-md-4">
+                  <div class="form-group-group grey" style="max-height:300px">
                       <h4><%-lang.Monitors%></h4>
                       <div id="powerVideoMonitorsList" class="list-group"></div>
                   </div>
-                  <div class="form-group-group grey" tab-section="settings" style="display:none">
-                      <h4><%- lang['Search Settings'] %></h4>
+                  <div class="form-group-group grey">
+                      <h4></h4>
                       <div class="form-group">
                           <label><%- lang['Date Range'] %></label>
                           <input id="powerVideoDateRange" class="form-control"></input>
@@ -41,7 +34,7 @@
                                   <input id="powerVideoEventLimit" class="form-control" placeholder="500"></input>
                               </div>
                         </div>
-                     </div>
+                    </div>
                   </div>
               </div>
               <div class="col-md-8">
