minor cleanup and fixes

--- a/web/pages/blocks/powerVideo2.ejs
+++ b/web/pages/blocks/powerVideo2.ejs
@@ -18,7 +18,7 @@
                           <button type="button" class="btn btn-primary btn-sm" tab-chooser="settings"><%- lang['Search Settings'] %></button>
                       </div>
                   </div>
-                  <div class="form-group-group grey" tab-section="monitors" style="max-height:265px">
+                  <div class="form-group-group grey" tab-section="monitors" style="max-height:265px;overflow:auto;">
                       <h4><%-lang.Monitors%></h4>
                       <div id="powerVideoMonitorsList" class="list-group"></div>
                   </div>
