Add Zoom In Magnifier to live stream and Power Video
+ adjust logWriter flood check timeout
+ minor cleanup (removing ";" just for you @kevinGodell)

--- a/web/pages/blocks/powerVideo2.ejs
+++ b/web/pages/blocks/powerVideo2.ejs
@@ -48,6 +48,9 @@
                   <div id="powerVideoMonitorViews"></div>
                   <div id="powerVideoMonitorControls" class="text-center">
                       <div class="btn-group">
+                          <button type="button" powerVideo-control="toggleZoom" class="btn btn-sm btn-default" title="<%- lang['Zoom In'] %>">&nbsp;<i class="fa fa-search-plus"></i>&nbsp;</button>
+                      </div>
+                      <div class="btn-group">
                           <button type="button" powerVideo-control="previousVideoAll" class="btn btn-sm btn-default" title="<%- lang['Previous Video'] %>">&nbsp;<i class="fa fa-arrow-circle-left"></i>&nbsp;</button>
                           <button type="button" powerVideo-control="playAll" class="btn btn-sm btn-danger" title="<%- lang.Play %>">&nbsp;<i class="fa fa-play"></i>&nbsp;</button>
                           <button type="button" powerVideo-control="pauseAll" class="btn btn-sm btn-default" title="<%- lang.Pause %>">&nbsp;<i class="fa fa-pause"></i>&nbsp;</button>
