--- a/web/pages/super.ejs
+++ b/web/pages/super.ejs
@@ -78,7 +78,7 @@
                                     <a class="nav-link" data-toggle="tab" href="#config" role="tab"><%-lang['Configuration']%></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" data-toggle="tab" href="#system" role="tab"><%- lang.Control %> & <%- lang.Logs %></a>
+                                    <a class="nav-link" data-toggle="tab" href="#system" role="tab"><%-lang['Controls and Logs']%></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" data-toggle="tab" href="#changeSuperPreferences" role="tab"><%-lang['Preferences']%></a>
@@ -401,7 +401,7 @@ $.conf.f.submit(function(e){
         e.html='<p>This is a change being applied to the configuration file (conf.json). Are you sure you want to do this? You must restart Shinobi for these changes to take effect. <b>The JSON below is what you are about to save.</b></p>'
         e.html+='<pre>'+JSON.stringify($.parseJSON($.conf.draw.val()),null,3)+'</pre>'
         $.confirm.body.html(e.html)
-        $.confirm.click({title:'Save',class:'btn-success'},function(){
+        $.confirm.click({title:lang.Save,class:'btn-success'},function(){
             $.post('<%=originalURL%><%=config.webPaths.superApiPrefix%>'+$user.sessionKey+'/system/configure',{
                 data: $.conf.draw.val()
             },function(data){
@@ -467,7 +467,7 @@ $.system.e.find('[system]').click(function(e){
     switch($(this).attr('system')){
         case'deleteLogs':
             $.confirm.e.modal('show');
-            $.confirm.title.html('<%=lang.Delete%> <%=lang.Logs%> <small>'+e.u+'</small>')
+            $.confirm.title.html('<%=lang['Delete Logs']%> <small>'+e.u+'</small>')
             e.html='Do you want to delete these logs? User logs will <b>not</b> be deleted.'
             $.confirm.body.html(e.html)
             $.confirm.click({title:lang.Delete,class:'btn-danger'},function(){
