--- a/web/pages/admin.ejs
+++ b/web/pages/admin.ejs
@@ -102,9 +102,15 @@
 <script><% include ../libs/js/bootstrap-table.min.js %></script>
 <script>
 $.ccio={subs:{}};$.ls=localStorage;
-$.ccio.ws=io(location.origin,{
-    path : tool.checkCorrectPathEnding(location.pathname)+'socket.io'
-});
+if(location.search === '?assemble=1'){
+    $.ccio.ws=io(location.origin,{
+        path : '/socket.io'
+    });
+}else{
+    $.ccio.ws=io(location.origin,{
+        path : tool.checkCorrectPathEnding(location.pathname)+'socket.io'
+    });
+}
 $.ccio.cx=function(x){if(!x.ke){x.ke=$user.ke;};if(!x.uid){x.uid=$user.uid;};return $.ccio.ws.emit('a',x)}
 $.ccio.ws.on('connect',function(d){
     $.ccio.cx({f:'init',auth:$user.auth_token});
