fix CSS on admin page

--- a/web/pages/admin.ejs
+++ b/web/pages/admin.ejs
@@ -11,7 +11,9 @@
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/font-awesome.min.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/fullcalendar.min.css">
 <link rel="stylesheet" href="<%-window.libURL%>libs/css/bootstrap-table.min.css">
-<link rel="stylesheet" href="<%-window.libURL%>libs/css/main.dash2.css">
+<link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.basic.css">
+<link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.modal.css">
+<link rel="stylesheet" href="<%-window.libURL%>libs/css/dash2.forms.css">
 <% customAutoLoad.adminLibsCss.forEach(function(lib){ %>
     <link rel="stylesheet" href="<%-window.libURL%>libs/css/<%-lib%>">
 <% }) %>
