Base framework for JSON Editor on Configuration in Super panel

--- a/web/pages/super.ejs
+++ b/web/pages/super.ejs
@@ -32,6 +32,10 @@
         .list-group li .form-group {margin:0}
         a {cursor:pointer}
     </style>
+    <script>
+        var superApiPrefix = "<%=originalURL%><%=config.webPaths.superApiPrefix%>"
+        var shinobiConfig = <%- JSON.stringify(plainConfig) %>
+    </script>
     <% customAutoLoad.superLibsCss.forEach(function(lib){ %>
         <link rel="stylesheet" href="<%-window.libURL%>libs/css/<%-lib%>">
     <% }) %>
@@ -103,28 +107,8 @@
                                         </nav>
                                         <table class="table table-striped"></table>
                                     </div>
-                                    <div class="tab-pane" id="config" role="tabpanel">
-                                        <small class="pull-right msg"></small>
-                                        <nav class="navbar navbar-rounded navbar-expand-lg bg-success">
-                                            <div class="container">
-                                                <div class="collapse navbar-collapse">
-                                                    <ul class="navbar-nav">
-                                                        <li class="nav-item">
-                                                            <a class="nav-link submit">
-                                                                <p><i class="fa fa-check"></i> <%-lang.Save%></p>
-                                                            </a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </nav>
-                                        <form class="form-group-group red" id="conf_json">
-                                            <small class="pull-right msg"></small>
-                                            <div id="configForHumans"></div>
-                                            <div class="form-group">
-                                                <textarea name="json" style="height:300px;font-family: monospace;" class="form-control"></textarea>
-                                            </div>
-                                        </form>
+                                    <div class="tab-pane text-left" id="config" role="tabpanel">
+                                        <% include blocks/superConfigEditor.ejs %>
                                     </div>
                                     <div class="tab-pane text-left" id="system" role="tabpanel">
                                         <nav class="navbar navbar-rounded navbar-expand-lg bg-primary">
@@ -182,9 +166,6 @@
     </div>
     <div id="temp" style="display:none"></div>
 </body>
-<script>
-    var superApiPrefix = "<%=originalURL%><%=config.webPaths.superApiPrefix%>"
-</script>
 <% include blocks/confirm.ejs %>
 <% customAutoLoad.superPageBlocks.forEach(function(block){ %>
     <%- include(block) %>
@@ -290,28 +271,6 @@ $.ccio.tm=function(x,d,z,k){
             if(!d.time){d.time=$.ccio.init('t')}
             tmp+='<tr class="search-row"><td><span title="'+d.time+'" class="livestamp"></span><br><small>'+d.time+'</small><br><small>'+d.mid+'</small></td><td></td><td><pre class="pre-inline">'+$.ccio.init('jsontoblock',JSON.parse(d.info))+'</pre></td></tr>'
         break;
-        case 5://config element
-            if(d.value instanceof Object){
-                tmp += '<div class="form-group config-row" layer="'+d.layer+'">\
-                        <div><input class="form-control key" type="text" value="'+d.key+'"></div>\
-                        <ul class="list-group valueObject" style="margin:0">'
-                ++d.layer
-                $.each(d.value,function(key,value){
-                    tmp += '<li class="list-group-item">'
-                    tmp += $.ccio.tm(5,{key:key,value:value,layer:d.layer})
-                    tmp += '</li>'
-                })
-                tmp += '</ul>'
-                tmp += '</div>'
-            }else{
-                tmp += '<div class="form-group config-row" layer="'+d.layer+'">\
-                    <label>\
-                        <div><input class="form-control key" type="text" value="'+d.key+'"></div>\
-                        <div><input class="form-control value" type="text" value="'+d.value+'"></div>\
-                    </label>\
-                </div>'
-            }
-        break;
     }
     if(z){
         $(z).prepend(tmp)
@@ -362,17 +321,8 @@ $.logs={e:$('#logs')}
 var config = <%- JSON.stringify(plainConfig) || [] %>
 $.conf={e:$('#config')};
 $.conf.f = $.conf.e.find('form')
-$.conf.configForHumans=$('#configForHumans')
 $.conf.draw=$.conf.e.find('[name="json"]')
 $.conf.valid=1;
-$.conf.jsonToFields = function(){
-//    var tmp = ''
-//    $.each(config,function(key,value){
-//        var layer = 0
-//        tmp += $.ccio.tm(5,{key:key,value:value,layer:layer})
-//    })
-//    $.conf.configForHumans.html(tmp)
-}
 $.conf.draw.val(JSON.stringify(<%-stringedConfig%>,null,3))
 $.conf.draw.keyup(function(){
     var msg=''
@@ -382,7 +332,6 @@ $.conf.draw.keyup(function(){
         msg = 'Valid JSON'
         color = 'success'
         $.conf.valid = 1
-        $.conf.jsonToFields()
     }catch(er){
         msg = 'Not a valid JSON'
         color = 'danger'
@@ -413,53 +362,6 @@ $.conf.f.submit(function(e){
         new PNotify({text:'Invalid JSON Syntax, Cannot Save.',type:'error'})
     }
     return false;
-})
-$.conf.e.on('keyup','.config-row input',function(){
-    var newConfig = {}
-    var checkRow = function(v,object){
-        var _this = $(v)
-        var key = _this.find('.key:first').val()
-        var layer = parseInt(_this.attr('layer'))
-        var list = _this.find('ul').first()
-        var isObject = list.length > 0
-        if(isObject){
-            if(!object[key]){
-                if(isNaN(key) === true){
-                    object[key] = {}
-                }else{
-                    object[key] = []
-                }
-            }
-            list.find('.config-row[layer="'+(layer+1)+'"]').each(function(n,v){
-                checkRow(v,object[key])
-            })
-        }else{
-            var value = _this.find('.value').val()
-            switch(value){
-                case'true':
-                    value = true
-                break;
-                case'false':
-                    value = false
-                break;
-                default:
-                    if(isNaN(value) === false){
-                        value = parseFloat(value)
-                    }
-                break;
-            }
-            object[key] = value
-        }
-
-    }
-    $.conf.configForHumans.children('.config-row').each(function(n,v){
-        checkRow(v,newConfig)
-    })
-    $.conf.draw.val(JSON.stringify(newConfig,null,3))
-    console.log(newConfig)
-})
-$.conf.f.ready(function(){
-    $.conf.jsonToFields()
 })
 //sys controls
 $.system={e:$('#system')}
