--- a/web/pages/blocks/superConfigEditor.ejs
+++ b/web/pages/blocks/superConfigEditor.ejs
@@ -15,12 +15,7 @@
 </nav>
 <form class="form-group-group red" id="conf_json">
     <small class="pull-right msg"></small>
-    <div id="configForHumans" class="better-json-editor pt-3">
-
-    </div>
-    <div class="form-group">
-        <textarea name="json" style="height:300px;font-family: monospace;" class="form-control"></textarea>
-    </div>
+    <div id="configForHumans" class="better-json-editor pt-2"></div>
 </form>
 <script src="<%-window.libURL%>libs/js/jsonEditor.js" type="text/javascript"></script>
 <script src="<%-window.libURL%>libs/js/super.configEditor.js" type="text/javascript"></script>
