--- a/web/pages/super.ejs
+++ b/web/pages/super.ejs
@@ -111,38 +111,7 @@
                                         <% include blocks/superConfigEditor.ejs %>
                                     </div>
                                     <div class="tab-pane text-left" id="system" role="tabpanel">
-                                        <nav class="navbar navbar-rounded navbar-expand-lg bg-primary">
-                                            <div class="container">
-                                                <div class="collapse navbar-collapse">
-                                                    <ul class="navbar-nav">
-                                                        <li class="nav-item">
-                                                            <a class="nav-link" system="deleteLogs">
-                                                                <p><i class="fa fa-trash-o"></i> <%-lang['Delete']%> <%-lang['Logs']%></p>
-                                                            </a>
-                                                        </li>
-                                                        <li class="nav-item">
-                                                            <a class="nav-link" restart="system">
-                                                                <p><i class="fa fa-retweet"></i> <%-lang['Restart Core']%></p>
-                                                            </a>
-                                                        </li>
-                                                        <li class="nav-item">
-                                                            <a class="nav-link" restart="cron">
-                                                                <p><i class="fa fa-retweet"></i> <%-lang['Restart CRON']%></p>
-                                                            </a>
-                                                        </li>
-                                                        <li class="nav-item">
-                                                            <a class="nav-link" restart="logs">
-                                                                <p><i class="fa fa-retweet"></i> <%-lang['Flush PM2 Logs']%></p>
-                                                            </a>
-                                                        </li>
-
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </nav>
-                                        <div id="logs" style="height:400px;overflow:auto">
-                                            <table class="table table-striped"></table>
-                                        </div>
+                                        <% include blocks/superSystemTab.ejs %>
                                     </div>
                                     <div class="tab-pane text-left" id="changeSuperPreferences" role="tabpanel">
                                         <% include blocks/changeSuperPreferences.ejs %>
@@ -314,130 +283,6 @@ $.ccio.init=function(x,d,z,k){
 }
 //logs
 $.logs={e:$('#logs')}
-//config editor
-<%
-    var stringedConfig = JSON.stringify(plainConfig)
-%>
-var config = <%- JSON.stringify(plainConfig) || [] %>
-$.conf={e:$('#config')};
-$.conf.f = $.conf.e.find('form')
-$.conf.draw=$.conf.e.find('[name="json"]')
-$.conf.valid=1;
-$.conf.draw.val(JSON.stringify(<%-stringedConfig%>,null,3))
-$.conf.draw.keyup(function(){
-    var msg=''
-    var color=''
-    try{
-        config = $.parseJSON($.conf.draw.val())
-        msg = 'Valid JSON'
-        color = 'success'
-        $.conf.valid = 1
-    }catch(er){
-        msg = 'Not a valid JSON'
-        color = 'danger'
-        $.conf.valid = 0
-    }
-    new PNotify({text:msg,type:color})
-})
-$.conf.e.find('.submit').click(function(e){
-    $.conf.f.submit()
-})
-$.conf.f.submit(function(e){
-    e.preventDefault()
-    if($.conf.valid===1){
-        $.confirm.e.modal('show');
-        $.confirm.title.html('Save Configuration <small>conf.json</small>')
-        e.html='<p>This is a change being applied to the configuration file (conf.json). Are you sure you want to do this? You must restart Shinobi for these changes to take effect. <b>The JSON below is what you are about to save.</b></p>'
-        e.html+='<pre>'+JSON.stringify($.parseJSON($.conf.draw.val()),null,3)+'</pre>'
-        $.confirm.body.html(e.html)
-        $.confirm.click({title:lang.Save,class:'btn-success'},function(){
-            $.post('<%=originalURL%><%=config.webPaths.superApiPrefix%>'+$user.sessionKey+'/system/configure',{
-                data: $.conf.draw.val()
-            },function(data){
-                // console.log(data)
-            })
-            // $.ccio.cx({f:'system',ff:'configure',data:$.parseJSON($.conf.draw.val())})
-        });
-    }else{
-        new PNotify({text:'Invalid JSON Syntax, Cannot Save.',type:'error'})
-    }
-    return false;
-})
-//sys controls
-$.system={e:$('#system')}
-$.system.e.find('[system]').click(function(e){
-    switch($(this).attr('system')){
-        case'deleteLogs':
-            $.confirm.e.modal('show');
-            $.confirm.title.html('<%=lang['Delete Logs']%> <small>'+e.u+'</small>')
-            e.html='Do you want to delete these logs? User logs will <b>not</b> be deleted.'
-            $.confirm.body.html(e.html)
-            $.confirm.click({title:lang.Delete,class:'btn-danger'},function(){
-                // $.ccio.cx({f:'logs',ff:'delete',ke:'$'})
-                $.get('<%=originalURL%><%=config.webPaths.superApiPrefix%>'+$user.sessionKey+'/logs/delete',function(data){
-                    console.log(data)
-                })
-                $.logs.e.find('table').empty()
-            });
-        break;
-        case'update':
-            $.confirm.e.modal('show')
-            $.confirm.title.html('<%=lang.Update%> Shinobi?')
-            $.confirm.body.html('Updating Shinobi means overwriting files. If you have modified any files yourself you should update Shinobi manually.')
-            $.confirm.click({title:lang.Update,class:'btn-danger'},function(){
-                // $.ccio.cx({f:'system',ff:'update'})
-                $.get('<%=originalURL%><%=config.webPaths.superApiPrefix%>'+$user.sessionKey+'/system/update',function(data){
-                    console.log(data)
-                })
-            })
-        break;
-    }
-})
-$.system.e.find('[restart]').click(function(e){
-    $.confirm.e.modal('show');
-    e.html=''
-    e.title=''
-    e.target=$(this).attr('restart').split(',')
-    e.target.forEach(function(v){
-        switch(v){
-            case'system':
-                e.html+='<p>Do you want to restart the core (camera.js)? plugins will not be restarted. They will reconnect when Shinobi is back online.</p>'
-            break;
-            case'cron':
-                e.html+='<p>Do you want to restart the CRON (cron.js)?</p>'
-            break;
-            case'logs':
-                e.html+='<p>Flush PM2 console logs? The logs saved in the database will <b>not</b> be deleted.</p>'
-            break;
-        }
-    })
-    $.confirm.title.html('<%=lang.Restart%>?')
-    $.confirm.body.html(e.html)
-    $.confirm.click({title:lang.Restart,class:'btn-danger'},function(){
-        // $.ccio.cx({f:'system',ff:'restart',target:e.target})
-        $.get('<%=originalURL%><%=config.webPaths.superApiPrefix%>'+$user.sessionKey+'/system/restart/'+encodeURIComponent(e.target),function(data){
-            console.log(data)
-        })
-    });
-})
-$.changeSuperPreferences = {
-    window : $('#changeSuperPreferences')
-}
-$.changeSuperPreferences.form = $.changeSuperPreferences.window.find('form')
-$.changeSuperPreferences.form.find('.submit').click(function(){
-    $.changeSuperPreferences.form.submit()
-})
-$.changeSuperPreferences.form.submit(function(e){
-    e.preventDefault()
-    var formValues = $(this).serializeObject()
-    // $.ccio.cx({f:'accounts',ff:'saveSuper',form:formValues})
-    $.post('<%=originalURL%><%=config.webPaths.superApiPrefix%>'+$user.sessionKey+'/accounts/saveSettings',{
-        data: JSON.stringify(formValues)
-    },function(data){
-        console.log(data)
-    })
-    return false
-})
 ////
 $(document).ready(function(){
     <% if(!users || !(users instanceof Array)){ %>
