--- a/plugins/face/faceManagerCustomAutoLoadLibrary/web/pages/blocks/super.faceManager.ejs
+++ b/plugins/face/faceManagerCustomAutoLoadLibrary/web/pages/blocks/super.faceManager.ejs
@@ -9,9 +9,11 @@
       </div>
       <div class="modal-body overflow-hidden">
           <div class="row">
-              <div class="col-4"></div>
+              <form id="faceManagerUploadForm" class="col-4">
+                  <input type="file" id="fileinput" name="files" />
+              </form>
               <div class="col-8" id="faceManagerImages">
-                  
+
               </div>
           </div>
       </div>
