FaceManager : upload, delete, and list working

--- a/plugins/face/faceManagerCustomAutoLoadLibrary/web/pages/blocks/super.faceManager.ejs
+++ b/plugins/face/faceManagerCustomAutoLoadLibrary/web/pages/blocks/super.faceManager.ejs
@@ -10,6 +10,9 @@
       <div class="modal-body overflow-hidden">
           <div class="row">
               <form id="faceManagerUploadForm" class="col-4">
+                  <div class="form-group">
+                      <input value="myFace" placeholder="<%- lang['Face Name'] %>" class="form-control form-control-lg" name="faceName" id="faceNameField">
+                  </div>
                   <input type="file" id="fileinput" name="files" />
               </form>
               <div class="col-8" id="faceManagerImages">
